t/examples/bad/parametric_pred.pl
:- use_module(library(perfunctory_types)).

:- type _ ---> p(_).

p(a).
p(b).
